--- a/main.html
+++ b/main.html
@@ -728,16 +728,16 @@
     <footer>
         <div class="footer_wrap">
             <ul>
-                <li><a href="#">윤리경영</a></li>
-                <li><a href="#">인재채용</a></li>
-                <li><a href="#">고객상담실</a></li>
-                <li><a href="#">글로벌 네트워크</a></li>
-                <li><a href="#">방문판매원 찾기</a></li>
-                <li><a href="#">매거진</a></li>
-                <li><a href="#">사이트맵</a></li>
-                <li><a href="#">관련사이트</a></li>
-                <li><a href="#">법적고지</a></li>
-                <li><a href="#">개인정보 처리방침</a></li>
+                <li><a href="https://www.apgroup.com/int/ko/misc/ethics-governance/ethics-governance.html">윤리경영</a></li>
+                <li><a href="https://recruit.amorepacific.co.kr/home.do">인재채용</a></li>
+                <li><a href="https://www.apgroup.com/int/ko/misc/customer-center/faq/faq.html">고객상담실</a></li>
+                <li><a href="https://www.apgroup.com/int/ko/misc/global-network/global-network.html">글로벌 네트워크</a></li>
+                <li><a href="https://www.apgroup.com/int/ko/misc/find-counselor/by-brand/by-brand.html">방문판매원 찾기</a></li>
+                <li><a href="https://www.apgroup.com/int/ko/misc/magazines/magazines.html">매거진</a></li>
+                <li><a href="https://www.apgroup.com/int/ko/misc/sitemap/sitemap.html">사이트맵</a></li>
+                <li><a href="https://www.apgroup.com/int/ko/misc/related-sites/related-sites.html">관련사이트</a></li>
+                <li><a href="https://www.apgroup.com/int/ko/misc/legal-information/legal-information.html">법적고지</a></li>
+                <li><a href="https://www.beautypoint.co.kr/footer/privacy.do">개인정보 처리방침</a></li>
             </ul>
             <h3>AMORE PACIFIC</h3>
             <span>© Since 1945 Amorepacific, All Rights Reserved.</span>
